Fix: seed selection size on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,10 +14,22 @@
         margin-top: 5px;
         position: absolute;
         left: 150px;
+
+        @media screen and (max-width: 400px) {
+            width: 50%;
+            position: absolute;
+            left: unset;
+            right: 0px;
+        }
     }
     .legend {
         position: absolute;
         left: 5px;
+
+        
+        @media screen and (max-width: 400px) {
+            width: 45%;
+        }
     }
 }
 
